# new_shellserver

./: .gitmodules  CMakeLists.txt  README.md  arena.h  client.c  client.h  common.c  common.h  dynarr.h  server.c  term.h
manifest/: HenriquedoVal.shellserver.installer.yaml  HenriquedoVal.shellserver.locale.en-US.yaml  HenriquedoVal.shellserver.yaml
